bk_ida/gccida/g2/redirect_edge_and_branch
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/redirect_edge_and_branch/src/cfgrtl.c:1338:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = ( unsigned __int16 *)target->head[1]; 
                           ^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/redirect_edge_and_branch/src/cfgrtl.c:1403:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v39.rtwint = ( __int64)v38[1].fld[0]; 
                       ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/redirect_edge_and_branch/src/cfgrtl.c:1460:37: error: use of undeclared identifier 'machine_mode'
v24 = gen_rtx_fmt_u00( LABEL_REF, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v18); 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/redirect_edge_and_branch/src/cfgrtl.c:1475:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v26 = ( __int64)v25[1]; 
                ^~~~~~
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/redirect_edge_and_branch/src/obj/cfgrtl.o] Error 1
